--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -881,8 +881,10 @@ td {
 }
 .highlightable {
     padding: 1rem 0 1rem;
-    overflow: auto;
     position: relative;
+}
+#sidebar .highlightable {
+    overflow: auto;
 }
 .lightbox-active #body {
     overflow: visible;
